--- a/templates/dir/directory.html
+++ b/templates/dir/directory.html
@@ -1,16 +1,69 @@
-<p> {{ directory_name }}</p>
-<ul>
-    {% for dir, path in directory_directories %}
-        <a href="/dir/browse/{{ path }}" >{{ dir }}</a> <br/>
-    {% endfor %}
-</ul>
-<ul>
-    {% for file, path, content, type in directory_files %}
-        {% if content != '' %}
-            {{ file }} : click <a href="/dir/browse/{{ path }}">here</a> to see {{ content }} or <a href="/dir/download/{{ path }}">download</a> it.<br/>
-        {% else %}
-            {{ file }} : <a href="/dir/download/{{ path }}">download</a> content.<br/>
-        {% endif %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Directory</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/static/file/dir.css">
+    </head>
+    <body>
+        <div class="container">
+            <div id="current_dir" >
+                <a href="/dir/browse/{{ back_dir }}"><i class="fas fa-chevron-circle-left" id="back_btn"></i></a>
+                <i class="fas fa-folder-open"> <i class="simple_text">{{ directory_name }}</i></i>
+            </div>
+            <div >
+                {% for dir, path in directory_directories %}
+                    <i class="fas fa-folder folder_item"> <i class="simple_text"><a href="/dir/browse/{{ path }}">{{ dir }}</a></i></i> <br/>
+                {% endfor %}
+            </div>
 
-    {% endfor %}
-</ul>
+            <div >
+                {% for file, path, content, type in directory_files %}
+                    <div class="row">
+                    {% if content == 'video' %}
+                        <div class="col-md-6">
+                            <i class="fas fa-film film_item"> <i class="simple_text">{{ file }}</i></i>
+                        </div>
+                        <div class="col-md-1">
+                            <a href="/dir/download/{{ path }}"><i class="fas fa-download download_btn"></i></a>
+                        </div>
+                        <div class="col-md-1">
+                            <a href="/dir/browse/{{ path }}"><i class="far fa-play-circle"></i></a>
+                        </div>
+                    {% elif content == 'audio' %}
+                        <div class="col-md-6">
+                            <i class="fas fa-music music_item"> <i class="simple_text">{{ file }}</i></i>
+                        </div>
+                        <div class="col-md-1">
+                            <a href="/dir/download/{{ path }}"><i class="fas fa-download download_btn"></i></a>
+                        </div>
+                        <div class="col-md-1">
+                            <a href="/dir/browse/{{ path }}"><i class="fas fa-volume-up"></i></a>
+                        </div>
+                    {% elif content == 'image' %}
+                        <div class="col-md-6">
+                            <i class="fas fa-image image_item"> <i class="simple_text">{{ file }}</i></i>
+                        </div>
+                        <div class="col-md-1">
+                            <a href="/dir/download/{{ path }}"><i class="fas fa-download download_btn"></i></a>
+                        </div>
+                        <div class="col-md-1">
+                            <a href="/dir/browse/{{ path }}"> <i class="far fa-eye"></i></a>
+                        </div>
+                    {% else %}
+                        <div class="col-md-6">
+                            <i class="far fa-file file_item"> <b><i class="simple_text">{{ file }}</i></b> </i>
+                        </div>
+                        <div class="col-md-1">
+                            <a href="/dir/download/{{ path }}"><i class="fas fa-download download_btn"></i></a>
+                        </div>
+                    {% endif %}
+                    </div>
+                {% endfor %}
+
+            </div>
+        </div>
+    </body>
+</html>
