--- a/templates/dir/show_file.html
+++ b/templates/dir/show_file.html
@@ -1,14 +1,42 @@
-<p>{{ filename }}</p>
-{% if content == "image" %}
-    <img src="/dir/stream/{{ link }}" alt="{{ filename }}"/>
-{% elif content == "video" %}
-    <video width="640" height="480" controls autoplay>
-        <source src="/dir/stream/{{ link }}" type="{{ type }}"/>
-    </video>
-{% elif content == "audio" %}
-    <audio controls autoplay>
-        <source src="/dir/stream/{{ link }}" type="{{ type }}"/>
-    </audio>
-{% else %}
-    this content cannot been showd
-{% endif %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>File</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/static/file/dir.css">
+    </head>
+    <body>
+        <div class="container">
+            <div id="current_file" class="row justify-content-center" >
+                <div class="col-md-1">
+                    <a href="/dir/browse/{{ back_dir }}"><i class="fas fa-chevron-circle-left" id="back_btn"></i></a>
+                </div>
+                <div class="col-md-5">
+                    <i class="fas fa-image image_item"> <i class="simple_text">{{ filename }}</i></i>
+                </div>
+                <div class="col-md-1">
+                    <a href="/dir/download/{{ link }}"><i class="fas fa-download download_btn"></i></a>
+                </div>
+            </div>
+            <div class="content_container">
+                {% if content == "image" %}
+                    <img src="/dir/stream/{{ link }}" class="content_card rounded" alt="{{ filename }}">
+                {% elif content == "video" %}
+                    <video class="content_card" controls autoplay>
+                        <source src="/dir/stream/{{ link }}" type="{{ type }}">
+                        Your browser does not support HTML5 video.
+                    </video>
+                {% elif content == "audio" %}
+                    <audio controls autoplay>
+                        <source src="/dir/stream/{{ link }}" type="{{ type }}" >
+                        Your browser does not support the audio tag.
+                    </audio>
+                {% else %}
+                    <p><i> Cannot Show this file </i></p>
+                {% endif %}
+            </div>
+        </div>
+    </body>
+</html>
