--- a/templates/dir/show_file.html
+++ b/templates/dir/show_file.html
@@ -10,17 +10,21 @@
     <body>
         <div class="container">
             <div id="current_file" class="row justify-content-center" >
-                <div class="col-md-1">
-                    <a href="/dir/browse/{{ back_dir }}"><i class="fas fa-chevron-circle-left" id="back_btn"></i></a>
+                <div class="col-md-3 col-sm-5">
+                    <a href="/dir/browse/{{ back_dir }}"><i class="fas fa-angle-double-left green_btn"></i></a>
+                     <i class="fas fa-chevron-circle-left green_btn" onclick="window.history.back()"></i><i class="fas fa-chevron-circle-right green_btn" onclick="window.history.forward()"></i>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-7 col-sm-6">
                     <i class="fas fa-image image_item"> <i class="simple_text">{{ filename }}</i></i>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 col-sm-1">
                     <a href="/dir/download/{{ link }}"><i class="fas fa-download download_btn"></i></a>
                 </div>
             </div>
-            <div class="content_container">
+            <div class="content_container row justify-content-around">
+                <div>
+                    <a href="/dir/prev/{{ link }}"><i class="fas fa-angle-double-left green_btn"></i></a>
+                </div>
                 {% if content == "image" %}
                     <img src="/dir/stream/{{ link }}" class="content_card rounded" alt="{{ filename }}">
                 {% elif content == "video" %}
@@ -36,6 +40,9 @@
                 {% else %}
                     <p><i> Cannot Show this file </i></p>
                 {% endif %}
+                <div>
+                    <a href="/dir/next/{{ link }}"><i class="fas fa-angle-double-right green_btn"></i></a>
+                </div>
             </div>
         </div>
     </body>
